Integrating-other-services/MSK/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: MSK triggered Lambda
Parameters:
  # Project Name Parameter
  ProjectPrefix:
    Type: String
    Default: ""

  VpcId:
    Type: String

  PrivateSubnetAId:
    Type: String
  # PrivateSubnetBId:
  #   Type: String
  PrivateSubnetCId:
    Type: String
  # PrivateSubnetDId:
  #   Type: String

Resources:
  MSKCluster:
    Type: AWS::MSK::Cluster
    Properties:
      BrokerNodeGroupInfo:
        ClientSubnets:
          - !Ref PrivateSubnetAId
          - !Ref PrivateSubnetCId
        InstanceType: kafka.m7g.large
        SecurityGroups:
          - !Ref SecurityGroupForMSK
        StorageInfo:
          EBSStorageInfo:
            VolumeSize: 100
      ClusterName: !Sub ${ProjectPrefix}Cluster
      ClientAuthentication:
        Sasl:
          Iam:
            Enabled: true
      EncryptionInfo:
        EncryptionInTransit:
          ClientBroker: TLS
          InCluster: true
      KafkaVersion: 3.6.0
      NumberOfBrokerNodes: 3
      StorageMode: LOCAL

  SecurityGroupForMSK:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectPrefix}SecurityGroupForMSK
      GroupDescription: This is for SecurityGroupForMSK
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # TLS
        - CidrIp: "0.0.0.0/0"
          Description: SecurityGroupForMSK
          FromPort: 9094
          IpProtocol: tcp
          ToPort: 9094
        # SASL/SCRAM
        - CidrIp: "0.0.0.0/0"
          Description: SecurityGroupForMSK
          FromPort: 9096
          IpProtocol: tcp
          ToPort: 9096
        # IAM
        - CidrIp: "0.0.0.0/0"
          Description: SecurityGroupForMSK
          FromPort: 9098
          IpProtocol: tcp
          ToPort: 9098
      Tags:
        - Key: Name
          Value: !Sub ${ProjectPrefix}SecurityGroupForMSK
